# SoundNinja

./: .eslintrc.js  .gitignore  .prettierrc  AGENTS.md  README.md  babel.config.js  config.json  db.json  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  vue.config.js
.agents/skills/caveman/: SKILL.md
.agents/skills/caveman-commit/: SKILL.md
.agents/skills/caveman-compress/scripts/: compress.py
.agents/skills/caveman-help/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.json  tsconfig.server.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/manifest/meta/: dev.json
.nuxt/types/: components.d.ts  imports.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts  schema.d.ts
agent/skills/cavecrew/: README.md  SKILL.md
agent/skills/caveman/: README.md  SKILL.md
agent/skills/caveman-commit/: SKILL.md
agent/skills/caveman-compress/: SKILL.md
agent/skills/caveman-compress/scripts/: cli.py  detect.py
agent/skills/caveman-help/: SKILL.md
agent/skills/caveman-review/: SKILL.md
agent/skills/caveman-stats/: SKILL.md
aur/: PKGBUILD  soundninja.desktop
i18n/locales/: de.json  en.json
public/: index.html
scripts/: bump-version.mjs
src/: App.vue  background.js  config.json  main.js  scriptBackup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  fsx.rs  gpu.rs  main.rs  paths.rs
src-tauri/src/audio/: cache.rs  devices.rs  mod.rs  playback.rs
src-tauri/src/menu/: mod.rs
src/SASS/: _settings.sass  style.sass
src/assets/scss/: _base.scss  _variables.scss  context-menu.scss  dialogs.scss  import-folders.scss  navbar.scss  pages.scss  settings-audio.scss  settings.scss  style.scss  titlebar.scss  ui-elements.scss
src/components/: About.vue  DropZone.vue  Settings.vue  Sidemenu.vue  SoundButton.vue  Tab.vue  TabButton.vue  TabwrapperContainer.vue  Topbar.vue
src/components/Assets/: BlurBG.vue  Icons.vue  TitleBar.vue
src/components/Icons/: ExitApp.vue  Maximize.vue  Minimize.vue
src/components/Links/: GitHub.vue  Instagram.vue  YouTube.vue
src/components/Modals/: About.vue  Settings.vue
src/components/Popups/: AboutOverlay.vue  DialogField.vue  ErrorAlert.vue  ImportFolders.vue  RenameField.vue  SettingsOverlay.vue
src/components/Section/: NavBar.vue  SoundButton.vue  SoundContainer.vue  TabItem.vue  Tabs.vue
src/components/UI/: ContextMenu.vue  DialogCloseButton.vue  UIButton.vue  UICheckbox.vue  UIInput.vue  UIListItem.vue
src/composables/: customFonts.ts  useTheme.ts
src/functions/: JsonHandle.js
src/pages/: about.vue  index.vue  settings.vue  theme-creator.vue
src/router/: index.js
src/sass/: _base.sass  navbar.sass  style.sass
src/store/: index.js
src/store/modules/: JsonHandeling.js
src/stores/: app.ts  appSettings.ts  jsonHandeling.ts
src/utils/: ConfigManager.js  DatabaseManager.js  FileManager.js  appConfig.ts  contrast.ts  db.ts  ipc.js  projects.ts
src/views/: About.vue  Main.vue  Settings.vue
(+5 files in other folders)
