[package]
name = "app"
version = "0.1.0"
description = "Your best Soundboard App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
rodio = "0.22.2"
anyhow = "1.0.66"
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "flac"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
