[package]
name = "app"
version = "0.3.0"
description = "Your best Soundboard App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.5.4"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
rodio = "0.22.2"
anyhow = "1.0.102"
symphonia = { version = "0.6.0", features = ["mp3", "wav", "ogg", "flac"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
